--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&amp;display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&amp;display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -44,7 +44,7 @@
     --primary: 0 0 98%;
     --primary-foreground: 240 5.9% 10%;
     --secondary: 240 3.7% 15.9%;
-    --secondary-parameter name="muted-foreground": 240 3.7% 15.9%;
+    --secondary-foreground: 240 3.7% 15.9%;
     --muted: 240 3.7% 15.9%;
     --accent: 240 3.7% 15.9%;
     --accent-foreground: 240 5.9% 10%;
@@ -60,6 +60,8 @@
   }
   body {
     @apply bg-background text-foreground;
-    font-feature-settings: 'rlig' 1, 'calt' 1;
+    font-feature-settings:
+      "rlig" 1,
+      "calt" 1;
   }
 }
